# mxframe

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  BENCHMARKS_STYLE.py  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  MANIFEST.in  PUBLISHING.md  README.md  README_STYLE.py  __init__.py  _modidx.py  aot_kernels.py  compiler.py  custom_ops.py  find_bench.py  kernels.mojopkg  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  lazy_expr.py  lazy_frame.py  llms-ctx.txt  optimizer.py  pixi.toml  plan_validation.py  pyproject.toml  roadmap.md  run_styles.py  settings.ini  setup.py  sql_frontend.py  style_tables.py
_docs/: bench_q1.html  bench_q1.html.md  bench_q3.html  bench_q3.html.md  bench_sort_limit_distinct.html  bench_sort_limit_distinct.html.md  compiler.html  compiler.html.md  core_bridge.html  core_bridge.html.md  custom_ops.html  custom_ops.html.md  index.html  index.html.md  lazy_expr.html  lazy_expr.html.md  lazy_frame.html  lazy_frame.html.md  search.json  sitemap.xml
_proc/: 01_core_bridge.html.md  01_core_bridge.ipynb  01_lazy_expr.html.md  01_lazy_expr.ipynb  02_lazy_frame.html.md  02_lazy_frame.ipynb  03_compiler.html.md  03_compiler.ipynb  04_custom_ops.html.md  04_custom_ops.ipynb  05_optimizer.ipynb  bench_q1.ipynb  bench_q3.ipynb  bench_sort_limit_distinct.ipynb  index.ipynb  nbdev.yml  sidebar.yml  sidebar.yml.bak
archive/: 00_core.ipynb  00_core_bridge.ipynb  01_ops.ipynb  02_max.ipynb  02_ops.ipynb  02a_max_experimental.ipynb  03_groupby.ipynb  03_max_engine.ipynb  04_groupby.ipynb  TODO.md  bench_cpu_gpu.py  bench_groupby_q1.py  core.py  custom-kernels.md  groupby.py  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  main.py  max_main.py  max_ops.py  minimal_gpu_kernel.mojopkg  ops.py  q1_kernels.mojo  q1_kernels.mojopkg  test_group_sum.mojo  test_groupby.py  test_mxcolumn_sum.py  test_unified_device.py
benchmarks/: bench_q1.ipynb  bench_q3.ipynb  bench_sort_limit_distinct.ipynb
docs/: dev-instructions.md  gpu-custom-op-guidelines.md  modular-mojo-strategies.md  pip-packaging-plan.md  roadmap.md  user-guide.md  vision-and-architecture.md
kernels_aot/: __init__.py  gpu_spike.mojo  group_sum_spike.mojo  kernels_aot.mojo  kernels_aot_gpu.mojo
kernels_v261/: __init__.mojo  debug_write_one.mojo  filter_gather.mojo  gather_rows.mojo  group_composite.mojo  group_count.mojo  group_encode.mojo  group_max.mojo  group_mean.mojo  group_min.mojo  group_sum.mojo  join_count.mojo  join_count_left.mojo  join_scatter.mojo  join_scatter_left.mojo  masked_global_agg.mojo  sort_indices.mojo  unique_mask.mojo
llm-ctx/: llms-mojo.txt  llms-python.txt  skills.md
mxframe/: __init__.py  _modidx.py  compiler.py  core_bridge.py  custom_ops.py  kernels.mojopkg  lazy_expr.py  lazy_frame.py  optimizer.py  plan_validation.py
mxframe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nbs/: # %% [markdown].py  01_core_bridge.ipynb  01_lazy_expr.ipynb  02_lazy_frame.ipynb  03_compiler.ipynb  04_custom_ops.ipynb  05_optimizer.ipynb  06_plan_validation.ipynb  bench_q1.ipynb  bench_q3.ipynb  bench_sort_limit_distinct.ipynb  index.ipynb
scripts/: _bench_aot.py  _check_gpu.py  _check_gpu_aot.py  _check_paths.py  _dump_nb_outputs.py  _dump_nb_source.py  _dump_smoke.py  _fix_smoke.py  (+49 more)
(+67 files in other folders)
